# qbatch-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: build.yaml
examples/: example.py
src/: config.rs  lib.rs  main.rs  templates.rs
